# tailwind

./: .env  ai_utils.py  app.py  booking_function.py  booking_prompt.json  models.py  pyproject.toml  streamlit_app.py  test_booking.py  test_flight_ui.py  test_results.txt
.streamlit/: config.toml
tests/: test_booking.py
